Chromad: Fix deleting user data

Deleting user account does not delete user data.
Deleting user from the list first removes GaiaIdMigrationStatus so it
uses email for Cryptohome identificator.
Did not affect Gaia users because Chrome still uses email as identifier and not GaiaId

BUG=712716
TEST=manual

Review-Url: https://codereview.chromium.org/2824343003
Cr-Commit-Position: refs/heads/master@{#465771}

Former-commit-id: 08590c2373943322cbcaa8e06c445cfcc7f3acd8